[package]
name = "rusty-quiz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
actix-web = "4.3"
actix-files = "0.6"
tera = "1.19"
rand = "0.8"

[[example]]
   name = "client"
   path = "client/client.rs"
   